@startuml
package kedinet.kedinet {
    class KedinetApplication
}

package kedinet.kedinet.config {
    class WebConfig
}

package kedinet.kedinet.controller {
    class AdminController
    class CatController
    class UserController
}

package kedinet.kedinet.converter {
}

package kedinet.kedinet.dto {
    class AdminDTO
    class CatDTO
    class ShelterDTO
    class UserDTO
}

package kedinet.kedinet.model {
    class Admin
    class Cat
    class Image
    class Shelter
    class User
}

package kedinet.kedinet.model.enums {
}

package kedinet.kedinet.repository {
    interface AdminRepo
    interface CatRepo
    interface CatRepoCustom
    interface ImageRepo
    interface UserRepo
}

package kedinet.kedinet.service {
    class CatRepoImpl
    class CatService
}

package kedinet.kedinet.util {
    class FileUploadUtil
}

KedinetApplication --> WebConfig

AdminController --> AdminRepo
AdminController --> CatRepo
AdminController --> ImageRepo
AdminController --> UserRepo
AdminController --> FileUploadUtil

CatController --> CatService
CatController --> CatRepo
CatController --> ImageRepo
CatController --> AdminRepo

UserController --> UserRepo
UserController --> CatRepo
UserController --> ImageRepo

CatService --> CatRepo
CatService --> ImageRepo

Admin --> Shelter
Cat --> Shelter
Cat --> Image
Cat --> User
User --> Cat

AdminRepo --> Admin
CatRepo --> Cat
CatRepoCustom --> CatRepo
ImageRepo --> Image
UserRepo --> User
CatRepoImpl --> CatRepoCustom

AdminDTO --> Admin
CatDTO --> Cat
CatDTO --> ShelterDTO
ShelterDTO --> Shelter
UserDTO --> User

@enduml
